--- a/app/src/main/res/layout/fragment_book.xml
+++ b/app/src/main/res/layout/fragment_book.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     style="@android:style/Widget.DeviceDefault.ScrollView"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     android:scrollbarStyle="insideInset"
     android:scrollbars="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     tools:context=".TechnicianActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -100,7 +101,7 @@
         <ImageView
             android:id="@+id/itemImg"
             android:layout_width="0dp"
-            android:layout_height="250dp"
+            android:layout_height="200dp"
             android:layout_marginStart="24dp"
             android:layout_marginTop="4dp"
             android:layout_marginEnd="24dp"
